# diagbench

./: CITATION.cff  LICENSE  LICENSE-DATA  README.md  croissant.json  pyproject.toml  requirements.txt
code/schemas/: action_schema.json  audit_schema.json  circuit_pilot_result_schema.json  circuit_pilot_task_schema.json  circuit_pilot_v2_task_schema.json  circuit_pilot_v3_1_task_schema.json  p1_task_schema.json  run_manifest_schema.json  scoring_schema.json  task_bank_manifest_schema.json  task_schema.json  trajectory_schema.json
code/scripts/: build_circuit_pilot_v2.py  build_circuit_pilot_v3_1.py  evaluate_circuit_pilot.py  quantify_response_control_profiles.py
data/circuit/: p1_tasks.jsonl  p2_tasks.jsonl  p3_tasks.jsonl  p4_tasks.jsonl
data/manifests/: release_manifest.json
data/veh/: p1_tasks.jsonl  p2_tasks.jsonl  p3_tasks.jsonl  p4_tasks.jsonl
docs/: ARTIFACT_STATEMENT.md  DATASHEET.md  MAINTENANCE.md  REPRODUCE.md
docs/audit/: construction_audit.md
paper/: checklist.tex  main.bib  main.tex  paper.tex
paper/sections/: abstract.tex  acknowledge.tex  appendix.tex  conclusion.tex  discussions.tex  experiments.tex  introduction.tex  method.tex  relatedwork.tex
prompts/: appendix_prompts_and_cases.tex  p1_triage.txt  p2_repair.txt  p3_recovery.txt  p4_ranking.txt  tier3_controlled_prompts.txt
results/analysis/: detailed_p1_p4_scores.md  detailed_p3_scores.csv  detailed_p4_scores.csv  family_effects.csv  family_effects.json  mixed_p123_metrics.csv  mixed_p123_report.md  probe_summary.csv  (+10 more)
scripts/: validate_release.py
tests/: test_release_smoke.py
(+855 files in other folders)
