[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagbench"
version = "1.0.0"
description = "Anonymous DiagBench review artifact"
requires-python = ">=3.9"
dependencies = ["jsonschema>=4.17", "numpy>=1.24", "scipy>=1.11"]

[tool.setuptools.packages.find]
where = ["code/src"]
